# pakk

./: .gitignore  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  _README.md  pyproject.toml  setup.py
config/: main.cfg  pakk.cfg  user_cfg_template.cfg
docs/: AUTHORS.md  README.md  connecting_to_gitlab.md  creating_packages.md  developing_connectors.md  developing_setups.md  developing_types.md  using_pakk.md
docs/examples/: README.md  connector_template.py
pakk/: README.md  __init__.py  __main__.py  cli.py  config_tester.py  logger.py  module.py
pakk/actions/: __init__.py  clean.py  config.py  configure.py  dev.py  environment.py  init.py  install.py  list.py  manager.py  ros2.py  setup.py  source.py  status.py  tree.py  update.py
pakk/args/: base_args.py  install_args.py  manager_args.py
pakk/config/: base.py  base_config.py  install_config.py  main_cfg.py  pakk_config.py  process.py
pakk/connector/: base.py  git_generic.py  local.py
pakk/connector/github/: __init__.py  connector.py
pakk/connector/gitlab/: __init__.py  config.py  connector.py
pakk/dependency_tree/: tree_printer.py
pakk/environments/: base.py  linux.py  loader.py
pakk/environments/old/: dockerbase.py
pakk/environments/parts/: nginx.py  python.py  ros2.py
pakk/helper/: cfg_converter.py  cli_util.py  file_util.py  gitlab_util.py  loader.py  lockfile.py  module_importer.py  progress.py
pakk/installer/: combining_installer.py
pakk/manager/systemd/: unit_generator.py
pakk/modules/: module.py
pakk/modules/connector/: base.py  cache.py  git_generic.py  local.py
pakk/modules/dependency_tree/: tree.py  tree_printer.py
pakk/modules/discoverer/: base.py  discoverer_gitlab.py  discoverer_local.py  discoverer_local_installable.py
pakk/pakkage/: core.py  init_helper.py
pakk/resolver/: base.py  resolver_fitting.py  resolver_newest.py
pakk/setup/: base.py  checker.py  setup_group.py  setup_service.py  setup_sudoers.py
pakk/types/: base.py  base_instruction_parser.py  type_asset.py  type_generic.py  type_python.py  type_ros2.py  type_runnable.py  type_setup.py  type_web.py
(+42 files in other folders)
