[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "pakk"
version = "0.1.0"
authors = [{ name = "Valentin Schröter", email = "vasc9380@th-wildau.de" }]
description = "Pakk Package Manager."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  'braceexpand',
  'click-aliases',
  'click',
  'extended-configparser',
  'flock',
  'graphviz',
  'InquirerPy',
  'jellyfish',
  'jsons',                # Does not work for Python3.11 any more
  'markdown-plus',
  'networkx',
  'node-semver',
  'prettytable',
  'psutil',
  'pyfiglet',
  'python-dotenv',
  'python-gitlab>=3.0.0',
  'rich',
  'semver',
  'tqdm',
  # 'jsons @ https://github.com/vschroeter/jsons.git',
]
classifiers = ["Programming Language :: Python :: 3"]

[tool.hatch.build.targets.wheel]
packages = ["pakk"]

[project.urls]
Homepage = "https://github.com/icampus-wildau/pakk"
Issues = "https://github.com/icampus-wildau/pakk/issues"

[project.scripts]
pakk = "pakk.cli:cli"
